--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "2.26.x",
     "eslint": "4.18.2",
     "eslint-config-htmlacademy": "0.4.x",
+    "gh-pages": "^2.2.0",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^5.0.3",
